<resources>
    <string name="app_name">healthy</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_recipes">Rețete</string>
    <string name="menu_add">Adaugă</string>
    <string name="menu_statistics">Statistici</string>
    <string name="menu_settings">Setări</string>
    <string name="progress_card_title"><b>Progresul tău de astăzi</b></string>
    <string name="calories_progress_counter"><b>%1$d / %2$d\nkcal</b></string>
    <string name="calories_burned_counter">%1$d\narse</string>
    <string name="calories_eaten_counter">%1$d\nconsumate</string>
    <string name="calories_from_which_text"><b>din care:</b></string>
    <string name="proteins_counter">%1$d\nproteine</string>
    <string name="lipids_counter">%1$d\nlipide</string>
    <string name="carbs_counter">%1$d\ncarbohidrați</string>
    <string name="fibers_counter">%1$d\nfibre</string>
    <string name="calories_title"><b>Calorii</b></string>
    <string name="liquids_title"><b>Lichide</b></string>
    <string name="liquids_progress_counter"><b>%1$d / %2$d\nml</b></string>
    <string name="user_greeting_text"><b>%1$s,\n%2$s!</b></string>
    <string name="user_profile_name"><b>Nume:</b> %1$s</string>
    <string name="user_profile_age"><b>Vârstă:</b> %1$d ani</string>
    <string name="user_profile_sex"><b>Sex:</b> %1$s</string>
    <string name="user_profile_height"><b>Înălțime:</b> %1$d m</string>
    <string name="user_profile_weight"><b>Greutate:</b> %1$d kg</string>
    <string name="user_profile_calories"><b>Necesar caloric:</b> %1$d kcal</string>
    <string name="user_profile_show">Arată info.</string>
    <string name="user_profile_hide">Ascunde info.</string>
    <string name="user_profile_edit">Editează info.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Parolă</string>
    <string name="login_btn_text">log in</string>
    <string name="login_no_account_text">Nu ai cont?</string>
    <string name="create_account_btn_text">Creează cont</string>
    <string name="signup_continue_btn_text">Continuă</string>
    <string name="signup_generate_btn_text">Generează planul alimentar</string>
    <string name="signup_user_data_name_input_hint">Nume<font color="#bb0000">*</font></string>
    <string name="signup_user_data_sex_m_text">Masculin</string>
    <string name="signup_user_data_sex_f_text">Feminin</string>
    <string name="signup_user_data_sex_title">Sex:<font color="#bb0000">*</font></string>
    <string name="signup_user_data_birthdate_title">Data nașterii:<font color="#bb0000">*</font></string>
    <string name="signup_user_data_height_input_hint">Înălțime (m)<font color="#bb0000">*</font></string>
    <string name="signup_user_data_weight_input_hint">Greutate (kg)<font color="#bb0000">*</font></string>
    <string name="signup_user_data_gain_lose_titlle">Doresc să:</string>
    <string name="signup_user_data_activity_level_titlle">Nivelul de activitate fizică:</string>
    <string name="signup_plan_calories_text">Necesarul tău caloric este de\n<b>%1$d kcal.</b> pe zi.</string>
    <string name="signup_finish_btn_text">Finalizează</string>
    <string-array name="activity_levels">
        <item>Absent (sedentarism)</item>
        <item>Scăzut (de 1–3 ori pe săptămână)</item>
        <item>Mediu (de 3–5 ori pe săptămână)</item>
        <item>Ridicat (de 5–7 ori pe săptămână)</item>
        <item>Foarte ridicat (de 2 ori pe zi)</item>
    </string-array>
    <string-array name="gain_lose">
        <item>mă mențin la greutatea actuala</item>
        <item>slăbesc 1 kg pe saptamana</item>
        <item>slăbesc 0.75 kg pe saptamana</item>
        <item>slăbesc 0.50 kg pe saptamana</item>
        <item>slăbesc 0.25 kg pe saptamana</item>
        <item>iau în greutate 0.25 kg pe saptamana</item>
        <item>iau în greutate 0.50 kg pe saptamana</item>
        <item>iau în greutate 0.75 kg pe saptamana</item>
        <item>iau în greutate 1 kg pe saptamana</item>
    </string-array>
    <string name="add_categories_title">Alege categoria pentru care vrei să adaugi noua înregistrare:</string>
    <string name="foods_category_btn_text">Mâncăruri</string>
    <string name="drinks_category_btn_text">Băuturi</string>
    <string name="activities_category_btn_text">Activități fizice</string>
    <string name="measurements_category_btn_text">Măsurători</string>
    <string name="food_drink_item_name"><b>%1$s</b></string>
    <string name="physical_activity_item_name"><b>%1$s</b></string>
    <string name="food_drink_item_calories">%1$d\nkcal/100g</string>
    <string name="add_food_db_food_title"><b>MÂNCARE</b></string>
    <string name="add_food_db_total_fibers">fibre\n%1$d</string>
    <string name="add_food_db_total_carbs">carb.\n%1$d</string>
    <string name="add_food_db_total_lipids">lipide\n%1$d</string>
    <string name="add_food_db_total_proteins">proteine\n%1$d</string>
    <string name="add_food_db_total_calories">calorii\n%1$d</string>
    <string name="add_food_db_total_title"><b>valori nutriționale totale:</b></string>
    <string name="add_food_db_per100_fibers">fibre\n%1$d</string>
    <string name="add_food_db_per100_carbs">carb.\n%1$d</string>
    <string name="add_food_db_per100_lipids">lipide\n%1$d</string>
    <string name="add_food_db_per100_proteins">proteine\n%1$d</string>
    <string name="add_food_db_per100_calories">calorii\n%1$d</string>
    <string name="add_food_db_per100_title"><b>valori nutriționale per 100 g:</b></string>
    <string name="greeting_morning">Bună dimineața</string>
    <string name="greeting_afternoon">Bună ziua</string>
    <string name="greeting_night">Bună seara</string>
    <string name="try_again_login_err_text">A intervenit o problemă!/nVâ rugăm sa încercați din nou!</string>
    <string name="add_measurement_name_hint">denumire<font color="#bb0000">*</font></string>
    <string name="add_food_db_name_hint">denumire<font color="#bb0000">*</font></string>
    <string name="add_food_db_quantity_hint">cantitate (g)<font color="#bb0000">*</font></string>
    <string name="add_drink_db_quantity_hint">cantitate (ml)<font color="#bb0000">*</font></string>
    <string name="add_measurement_value_hint">valoare (%1$s)<font color="#bb0000">*</font></string>
    <string name="add_height_value_hint">valoare (cm)<font color="#bb0000">*</font></string>
    <string name="add_weight_value_hint">valoare (kg)<font color="#bb0000">*</font></string>
    <string name="btn_add_text">ADAUGĂ</string>
    <string name="record_added_text">Înregistrare adaugată!</string>
    <string name="invalid_quantity_text">Cantitate invalidă!</string>
    <string name="invalid_name_text">Denumire invalidă!</string>
    <string name="invalid_username_text">Numele nu poate avea mai puțin de 2 caractere!</string>
    <string name="invalid_height_text">Înălțime invalidă!</string>
    <string name="invalid_weight_text">Greutate invalidă!</string>
    <string name="invalid_birthdate_text">Dată invalidă!</string>
    <string name="user_created_text">Te-ai înregistrat cu succes!</string>
    <string name="invalid_password_login_text">Parolă invalidă!</string>
    <string name="invalid_email_text">Email invalid!</string>
    <string name="invalid_password_signup_text">Parola trebuie să aibă cel puțin 6 caractere!</string>
    <string name="add_known100_text">Cunosc valorile nutriționale per 100 g.</string>
    <string name="add_unknown100_text">Nu cunosc valorile nutriționale per 100 g.</string>
    <string name="add_known100_drink_text">Cunosc valorile nutriționale per 100 ml.</string>
    <string name="add_unknown100_drink_text">Nu cunosc valorile nutriționale per 100 ml.</string>
    <string name="add_food_m_calories_hint">calorii</string>
    <string name="add_food_m_proteins_hint">proteine</string>
    <string name="add_food_m_lipids_hint">lipide</string>
    <string name="add_food_m_carbs_hint">carbohidrati</string>
    <string name="add_food_m_fibers_hint">fibre</string>
    <string name="add_drink_db_drink_title"><b>BĂUTURĂ</b></string>
    <string name="add_measurement_title"><b>MĂSURĂTOARE</b></string>
    <string name="add_height_title"><b>ÎNĂLȚIME</b></string>
    <string name="add_weight_title"><b>GREUTATE</b></string>
    <string name="add_physical_activity_title"><b>ACTIVITATE FIZICĂ</b></string>
    <string name="add_physical_activity_total_view"><b>TOTAL CALORII ARSE:</b>\n%1$d\nkcal</string>
    <string name="add_activity_db_quantity_hint">durată (min)<font color="#bb0000">*</font></string>
    <string name="add_activity_m_burned_calories_hint">calorii arse<font color="#bb0000">*</font></string>
    <string name="invalid_value_text">Valoare invalidă!</string>
    <string name="recipe_title"><b>%1$s</b></string>
    <string name="recipe_calories"><b>%1$d</b>\nkcal/100g</string>
    <string name="recipe_flags"><b>%1$s</b>\n<b>%2$s</b></string>
    <string name="recipe_details_title">%1$s</string>
    <string name="recipe_details_calories">%1$d\nkcal/100g</string>
    <string name="recipe_details_serving">(%1$d porție)</string>
    <string name="recipe_details_servings">(%1$d porții)</string>
    <string name="recipe_details_ingredients_title">Ingrediente:</string>
    <string name="recipe_details_source">sursă: e-retete.ro</string>
    <string name="recipe_details_ingredients">%1$s</string>
    <string name="recipe_details_view_btn_text">Vezi mod preparare</string>
    <string name="recipe_details_add_btn_text">Adaugă</string>
    <string name="recipe_item_name">%1$s</string>
    <string name="recipe_search_hint">Caută rețetă</string>
    <string name="recipe_category_all">Toate</string>
    <string name="recipe_category_breakfast">Mic-dejun</string>
    <string name="recipe_category_lunch">Prânz</string>
    <string name="recipe_category_dinner">Cină</string>
    <string name="recipe_category_drinks">Băuturi</string>
    <string name="recipe_category_dessert">Desert</string>
    <string name="recipe_category_gluten_free">Fără gluten</string>
    <string name="recipe_category_low_calories">Calorii reduse</string>
    <string name="recipe_details_quantity">Ingrediente pentru: %1$dg produs</string>
    <string name="recipe_details_total_calories">Valoare energetică totală: cca %1$dkcal</string>
    <string name="recipes_nothing_text">Nu există rețete pe baza filtrelor aplicate!</string>
    <string name="records_nothing_text">Nu există înregistrări pe baza filtrelor aplicate!</string>
    <string name="add_recipe_title"><b>REȚETĂ</b></string>
    <string name="add_recipe_quantity_hint">cantitate (g)<font color="#bb0000">*</font></string>
    <string name="add_recipe_name_hint">denumire<font color="#bb0000">*</font></string>
    <string name="add_recipe_quantity_all">Toată cantitatea din rețetă (%1$dg)</string>
    <string name="add_recipe_total_calories">Calorii totale: %1$dkcal</string>
    <string name="statistics_no_records_text">Nu există înregistrări recente!</string>
    <string name="statistics_view_records_btn_text">Vezi toate înregistrările</string>
    <string name="statistics_view_stats_btn_text">Vezi toate statisticile</string>
    <string name="statistics_stats_title">Statistici</string>
    <string name="statistics_streak">%1$s, ți-ai completat necesarul caloric zilnic\n în %2$d din %3$d zile!</string>
    <string name="statistics_stats_text">Ultimele %1$d înregistrări:</string>
    <string name="statistics_one_stats_text">Ultima înregistrare:</string>
    <string name="recipe_category_recomanded">Recomandate</string>
    <string name="settings_title">Setări</string>
    <string name="logout_btn_text">Deconectare</string>
    <string name="modify_plan_btn_text">Modifică planul caloric</string>
    <string name="settings_account_text">Cont utiilizator</string>
    <string name="settings_plan_text">Plan caloric</string>
    <string name="settings_user_data_text">Date utilizator</string>
    <string name="modify_user_data_btn_text">Modifică datele personale</string>
</resources>