<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RecipesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="8dp"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:src="@drawable/search_icon" />

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/recipe_search"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_search_hint"
                android:minHeight="48dp" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/recipes_categories"
                app:singleSelection="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp">

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_recomanded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/gold"
                    android:text="@string/recipe_category_recomanded" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:checked="true"
                    android:id="@+id/recipes_category_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_all" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_breakfast" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_lunch" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_dinner" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_drinks" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_dessert" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_gluten_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_gluten_free" />

                <com.google.android.material.chip.Chip
                    android:checkable="true"
                    android:id="@+id/recipes_category_low_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_category_low_calories" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:visibility="gone"
            android:id="@+id/recipes_nothing"
            android:layout_marginVertical="100dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recipes_nothing_text"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <ListView
            android:id="@+id/recipes_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

</FrameLayout>