<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragments.AddFoodDbDetailsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/add_food_gradient"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/add_food_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:text="@string/add_food_db_food_title"
                android:textAlignment="center"
                android:textSize="20sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/food_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_food_db_name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/food_quantity_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_food_db_quantity_hint"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp" />

            <TextView
                android:id="@+id/add_food_db_per100_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_food_db_per100_title"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/add_food_db_per100_calories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_per100_calories"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_per100_proteins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_per100_proteins"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_per100_lipids"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_per100_lipids"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_per100_carbs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_per100_carbs"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_per100_fibers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_per100_fibers"
                    android:textAlignment="center" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp" />

            <TextView
                android:id="@+id/add_food_db_total_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_food_db_total_title"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/add_food_db_total_calories"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_total_calories"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_total_proteins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_total_proteins"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_total_lipids"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_total_lipids"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_total_carbs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_total_carbs"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/add_food_db_total_fibers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_db_total_fibers"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_food_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="32dp"
                android:text="@string/btn_add_text" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>