<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/settings_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/settings_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_account_text"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_btn_text"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/settings_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_plan_text"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="16dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_calories_plan_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_plan_btn_text"
                    app:cornerRadius="10dp" />

                <TextView
                    android:id="@+id/settings_user_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_user_data_text"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginVertical="16dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_user_data_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_user_data_btn_text"
                    app:cornerRadius="10dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>